Read-Aufruf ausbessern
Read hat nicht funktioniert, wenn in einer Maske ein primary-Key
vorkommt, der nicht im Head ist.